--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                         <div class="demo-container">
                             <img src="images/movie.png" alt="movie">
                             <div class="button-container">
-                                <a href="movie-database/index.html"><b>d e m o</b></a>
                                 <a href="https://github.com/aaronyt03/movie-app"><b>c o d e</b></a>
                             </div>
                         </div>
@@ -164,8 +163,7 @@
                         <div class="demo-container">
                             <img src="images/wordpress.png" alt="wordpress">
                             <div class="button-container">
-                                <a href="https://www.aaronytlee.com"><b>d e m o</b></a>
-                                <a href="https://github.com/aaronyt03"><b>c o d e</b></a>
+                                <a href="https://github.com/aaronyt03/school-theme"><b>c o d e</b></a>
                             </div>
                         </div>
                         <div class="info-container">
@@ -216,7 +214,6 @@
                         <div class="demo-container">
                             <img src="images/shoutbox.png" alt="game">
                             <div class="button-container">
-                                <a href="http://localhost/shoutbox/index.php"><b>d e m o</b></a>
                                 <a href="https://github.com/aaronyt03/yakbaknew"><b>c o d e</b></a>
                             </div>
                         </div>
@@ -260,7 +257,6 @@
                         <div class="demo-container">
                             <img src="images/typing.png" alt="country">
                             <div class="button-container">
-                                <a href="typinggame/index.html"><b>d e m o</b></a>
                                 <a href="https://github.com/aaronyt03/typing-hell"><b>c o d e</b></a>
                             </div>
                         </div>
